syntax = "proto3";
option cc_generic_services = true;

message callVoteRequest {
    int32 term = 1;
    int32 candidate_id = 2;
    int32 last_log_idx = 3;
    int32 last_log_term = 4;
}

message callVoteResponse {
    int32 ret_code = 1;
    string res_info = 2;
    int32 term = 3;
    bool vote_granted = 4;
}

message appendLogRequest {
    int32 term = 1;
    int32 leader_id = 2;
    int32 prev_log_idx = 3;
    int32 prev_log_term = 4;
    repeated string log_entries = 5;
    int32 leader_commit = 6;
}

message appendLogResponse {
    int32 ret_code = 1;
    string res_info = 2;
    int32 term = 3;
    bool success = 4;
}

service RaftServer {
    rpc call_vote(callVoteRequest) returns (callVoteResponse);
    rpc append_log(appendLogRequest) returns (appendLogResponse);
}
